tests/ui/const-generics/issues/issue-67945-1.full.stderr
error[E0308]: mismatched types
  --> $DIR/issue-67945-1.rs:10:20
   |
LL | struct Bug<S> {
   |            - expected this type parameter
...
LL |         let x: S = MaybeUninit::uninit();
   |                -   ^^^^^^^^^^^^^^^^^^^^^ expected type parameter `S`, found `MaybeUninit<_>`
   |                |
   |                expected due to this
   |
   = note: expected type parameter `S`
                       found union `MaybeUninit<_>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
